--- a/style.css
+++ b/style.css
@@ -13,16 +13,38 @@ html {
 body {
 	background-color: white;
 	font-family: 'Open Sans', sans-serif;
+	text-align: justify;
+	font-size: 15px;
 }
-
+b {
+	font-family: 'Open Sans', bold;
+}
 
 h1{	
-	color: #055052;
+	color: black;
+	font-size: 27px;
 }
 
-h4{
+h2,h3 {
+}
+
+h4 {
 	text-align: right;
 	color: white;
+}
+
+p {
+	padding-top: 0.5mm;
+}
+
+hr {
+	border: 0px;
+	border-top: 2px solid black;
+	color: black;
+}
+
+a {
+	color:#53B8BB;
 }
 .top {
 	background-color: white;
@@ -30,7 +52,7 @@ h4{
 }
 
 .belly {
-	background-color: #F3F2C9;
+	background-color: #c5d5d6;
 	width: 100%;
 	height: 215mm;
     display: flex;
@@ -41,7 +63,7 @@ h4{
 	width: 50%;
 	height: 100%;
 	margin: 0mm;
-	padding: 5mm;
+	padding: 7mm;
 	background-color: white;
 }	
 
@@ -51,6 +73,7 @@ h4{
 }
 .right {
 	width: 25%;
+	background-color: white;
 }
 
 .foot {
