--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,110 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title>Anonymous Posting</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
-   </head>
-   <body class="container">
-      <div class="p-5 text-center">
-         <h1><span class="text-success">Anonymous</span> <span>Posting</span></h1>
-      </div>
-      <div class="card text-white bg-success mb-3">
-         <div class="card-body">
-            <div class="card-header">What is in your mind?</div>
+<head>
+    <title>Anonymous Posting</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="container">
+    <div class="p-5 pb-2 text-center">
+        <h1><span class="text-success">Anonymous</span> <span>Posting</span></h1>
+    </div>
+    <div class="card text-white bg-success mb-2">
+        <div class="card-body">
+            <div class="card-header">What is on your mind?</div>
             <form method="POST" action="/">
-               <div class="form-group">
-                  <label for="post">Message</label>
-                  <input type="text" name="post" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Write here...">
-                  <small id="post" class="form-text text-muted">We'll never share your identity with anyone else.</small>
-               </div>
-               <button type="submit" class="btn btn-primary">Submit</button>
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <label for="post">Message</label>
+                    <input type="text" name="post" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Write here...">
+                    <small id="post" class="form-text text-muted">We'll never share your identity with anyone else.</small>
+                </div>
+
+
+                <div class="form-check p-0 mb-2">
+                    <label>Categories (select up to 2):</label>
+                    <br>
+                    {% for category in categories %}
+                    <input type="checkbox" name="categories" value="{{ category }}"> {{ category }}
+                    {% endfor %}
+                </div>
+
+
+
+
+                <button type="submit" class="btn btn-primary">Submit</button>
+                {% if error %}
+                <div class="alert alert-danger mt-3">{{ error }}</div>
+                {% endif %}
+                <input type="hidden" name="filter" value="{{ filter }}">
             </form>
-         </div>
-      </div>
-      <p><u>Posts:</u></p>
-      {% for post in posts %}
-      <div class="card mb-3">
-         <div class="card-header">
-            Quote
-         </div>
-         <div class="card-body">
-            <blockquote class="blockquote mb-0">
-               <p>{{ post }}</p>
-               <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-            </blockquote>
-         </div>
-      </div>
-      {% endfor %}
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
-   </body>
+        </div>
+    </div>
+
+
+    <div class="m-2 p-2 d-flex justify-content-end">
+        <form method="GET">
+			<button class="btn text-secondary">Filter by Tag:</button>
+            <button type="submit" name="filter" value="all" class="btn {{ 'active-filter' if filter == 'all' else 'btn-secondary' }}">All</button>
+            <button type="submit" name="filter" value="Secrets" class="btn {{ 'active-filter' if filter == 'Secrets' else 'btn-secondary' }}">Secrets</button>
+            <button type="submit" name="filter" value="Family" class="btn {{ 'active-filter' if filter == 'Family' else 'btn-secondary' }}">Family</button>
+            <button type="submit" name="filter" value="Health" class="btn {{ 'active-filter' if filter == 'Health' else 'btn-secondary' }}">Health</button>
+            <button type="submit" name="filter" value="Confession" class="btn {{ 'active-filter' if filter == 'Confession' else 'btn-secondary' }}">Confession</button>
+            <button type="submit" name="filter" value="Other" class="btn {{ 'active-filter' if filter == 'Other' else 'btn-secondary' }}">Other</button>
+        </form>
+    </div>
+
+    <p><u>Posts:</u></p>
+
+    {% for message in messages|reverse %}
+
+	<div class="card mb-3">
+		<div class="card-header d-flex justify-content-between align-items-center">
+			<div class="d-flex align-items-center">
+				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle m-0" viewBox="0 0 16 16">
+					<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+					<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+				</svg>
+				<span class="ms-2 font-weight-bold" h5><b> {{ message['name'] }}</b></span>
+			</div>
+			<div class="text-end">
+				{{ message['timestamp'] }} in {{ ', '.join(message['categories']) if message['categories'] }}
+			</div>
+		</div>
+		<div class="card-body">
+			<blockquote class="blockquote mb-0">
+				<p>{{ message['post'] }}</p>
+			</blockquote>
+		
+		</div>
+
+        <div class="card-footer">
+
+                {% for comment in message['comments'] %}
+				  <p class="mb-2">{{ comment['comment'] }} — an <b>anonymous</b> user at <span class="text-info">{{ comment['timestamp'] }}</span>.<p>
+                {% endfor %}
+
+            <form method="POST" action="/">
+			
+                <input type="hidden" name="name" value="{{ message['name'] }}" />
+                <input type="hidden" name="post" value="" />
+                <div class="form-group">
+                    <label for="comment" >Write a Comment</label>
+
+                    <input type="text" name="comment" class="form-control" placeholder="Your Comment">
+                </div>
+                <input type="hidden" name="parent_id" value="{{ message['id'] }}" />
+                <input type="hidden" name="filter" value="{{ filter }}">
+
+                <button type="submit" class="btn btn-primary mt-2">Submit Comment</button>
+            </form>
+        
+		</div>
+    </div>
+    {% endfor %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
