--- a/templates/index.html
+++ b/templates/index.html
@@ -43,9 +43,10 @@
             </form>
         </div>
     </div>
+	
+	
 
-
-    <div class="m-2 p-2 d-flex justify-content-end">
+    <div class="m-1 p-1 d-flex justify-content-flex-start">
         <form method="GET">
 			<button class="btn text-secondary">Filter by Tag:</button>
             <button type="submit" name="filter" value="all" class="btn {{ 'active-filter' if filter == 'all' else 'btn-secondary' }}">All</button>
@@ -57,11 +58,25 @@
         </form>
     </div>
 
+	<form method="GET">
+		<div class="form-group">
+			<label for="search">Search Posts:</label>
+			<input type="text" name="search" class="form-control" id="search_posts" placeholder="Enter keywords">
+		</div>
+		<button type="submit" class="btn btn-primary" id="search_button">Search</button>
+	</form>
+
+
+	<div id="no-results" style="display: none; color: red;">
+		<p> No results found. </p>
+	</div>
+
+
     <p><u>Posts:</u></p>
 
     {% for message in messages|reverse %}
 
-	<div class="card mb-3">
+	<div class="card mb-3" style="display: block">
 		<div class="card-header d-flex justify-content-between align-items-center">
 			<div class="d-flex align-items-center">
 				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle m-0" viewBox="0 0 16 16">
@@ -70,7 +85,7 @@
 				</svg>
 				<span class="ms-2 font-weight-bold" h5><b> {{ message['name'] }}</b></span>
 			</div>
-			<div class="text-end">
+			<div class="post-text text-end">
 				{{ message['timestamp'] }} in {{ ', '.join(message['categories']) if message['categories'] }}
 			</div>
 		</div>
@@ -105,6 +120,13 @@
 		</div>
     </div>
     {% endfor %}
+	
+		<div id="no-results" style="display: none; color: red;">
+		<p> No results found. </p>
+	</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="script.js"></script>
+
 </body>
 </html>
