--- a/templates/index.html
+++ b/templates/index.html
@@ -66,12 +66,6 @@
 		<button type="submit" class="btn btn-primary" id="search_button">Search</button>
 	</form>
 
-
-	<div id="no-results" style="display: none; color: red;">
-		<p> No results found. </p>
-	</div>
-
-
     <p><u>Posts:</u></p>
 
     {% for message in messages|reverse %}
@@ -86,7 +80,7 @@
 				<span class="ms-2 font-weight-bold" h5><b> {{ message['name'] }}</b></span>
 			</div>
 			<div class="post-text text-end">
-				{{ message['timestamp'] }} in {{ ', '.join(message['categories']) if message['categories'] }}
+				 {{ message['timestamp'] }} in {{ ', '.join(message['categories']) if message['categories'] else 'No categories' }}
 			</div>
 		</div>
 		<div class="card-body">
@@ -126,7 +120,5 @@
 	</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="script.js"></script>
-
 </body>
 </html>
