--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,6 @@
                     <small id="post" class="form-text text-muted">We'll never share your identity with anyone else.</small>
                 </div>
 
-
                 <div class="form-check p-0 mb-2">
                     <label>Categories (select up to 2):</label>
                     <br>
@@ -31,9 +30,6 @@
                     <input type="checkbox" name="categories" value="{{ category }}"> {{ category }}
                     {% endfor %}
                 </div>
-
-
-
 
                 <button type="submit" class="btn btn-primary">Submit</button>
                 {% if error %}
@@ -43,12 +39,10 @@
             </form>
         </div>
     </div>
-	
-	
 
     <div class="m-1 p-1 d-flex justify-content-flex-start">
         <form method="GET">
-			<button class="btn text-secondary">Filter by Tag:</button>
+            <button class="btn text-secondary">Filter by Tag:</button>
             <button type="submit" name="filter" value="all" class="btn {{ 'active-filter' if filter == 'all' else 'btn-secondary' }}">All</button>
             <button type="submit" name="filter" value="Secrets" class="btn {{ 'active-filter' if filter == 'Secrets' else 'btn-secondary' }}">Secrets</button>
             <button type="submit" name="filter" value="Family" class="btn {{ 'active-filter' if filter == 'Family' else 'btn-secondary' }}">Family</button>
@@ -58,67 +52,57 @@
         </form>
     </div>
 
-	<form method="GET">
-		<div class="form-group">
-			<label for="search">Search Posts:</label>
-			<input type="text" name="search" class="form-control" id="search_posts" placeholder="Enter keywords">
-		</div>
-		<button type="submit" class="btn btn-primary" id="search_button">Search</button>
-	</form>
+    <form method="GET">
+        <div class="form-group">
+            <label for="search">Search Posts:</label>
+            <input type="text" name="search" class="form-control" id="search_posts" placeholder="Enter keywords">
+        </div>
+        <button type="submit" class="btn btn-primary" id="search_button">Search</button>
+    </form>
 
     <p><u>Posts:</u></p>
 
     {% for message in messages|reverse %}
 
-	<div class="card mb-3" style="display: block">
-		<div class="card-header d-flex justify-content-between align-items-center">
-			<div class="d-flex align-items-center">
-				<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle m-0" viewBox="0 0 16 16">
-					<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-					<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-				</svg>
-				<span class="ms-2 font-weight-bold" h5><b> {{ message['name'] }}</b></span>
-			</div>
-			<div class="post-text text-end">
-				 {{ message['timestamp'] }} in {{ ', '.join(message['categories']) if message['categories'] else 'No categories' }}
-			</div>
-		</div>
-		<div class="card-body">
-			<blockquote class="blockquote mb-0">
-				<p>{{ message['post'] }}</p>
-			</blockquote>
-		
-		</div>
+    <div class="card mb-3" style="display: block">
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-circle m-0" viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                </svg>
+                <span class="ms-2 font-weight-bold" h5><b> {{ message.name }}</b></span>
+            </div>
+            <div class="post-text text-end">
+                {{ message.timestamp }} in {{ ', '.join(message.categories) if message.categories else 'No categories' }}
+            </div>
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>{{ message.post }}</p>
+            </blockquote>
+        </div>
 
         <div class="card-footer">
-
-                {% for comment in message['comments'] %}
-				  <p class="mb-2">{{ comment['comment'] }} — an <b>anonymous</b> user at <span class="text-info">{{ comment['timestamp'] }}</span>.<p>
-                {% endfor %}
-
+            {% for comment in message.comments %}
+                <p class="mb-2">{{ comment.comment }} — an <b>anonymous</b> user at <span class="text-info">{{ comment.timestamp }}</span>.<p>
+            {% endfor %}
             <form method="POST" action="/">
-			
-                <input type="hidden" name="name" value="{{ message['name'] }}" />
+                <input type="hidden" name="name" value="{{ message.name }}" />
                 <input type="hidden" name="post" value="" />
                 <div class="form-group">
                     <label for="comment" >Write a Comment</label>
-
                     <input type="text" name="comment" class="form-control" placeholder="Your Comment">
                 </div>
-                <input type="hidden" name="parent_id" value="{{ message['id'] }}" />
+                <input type="hidden" name="parent_id" value="{{ message.id }}" />
                 <input type="hidden" name="filter" value="{{ filter }}">
-
                 <button type="submit" class="btn btn-primary mt-2">Submit Comment</button>
             </form>
-        
-		</div>
+        </div>
     </div>
     {% endfor %}
-	
-		<div id="no-results" style="display: none; color: red;">
-		<p> No results found. </p>
-	</div>
+    <div id="no-results" style="display: none; color: red;">
+        <p> No results found. </p>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
+    <script src="https
